--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,15 @@
 /*--------------------------------- General */
 
+.container {
+    margin: 0;
+    padding: 0;
+}
 
 /*--------------------------------- Colors */
 
+.why-section-bg-color {
+    background-color: #DDD0C8;
+}
 
 /*--------------------------------- Home */
 
@@ -47,7 +54,7 @@
     top: 55px;
     left: 0;
     right: 0;
-    bottom: -56px;
+    bottom: -74px;
     background: linear-gradient(to right, #ffffff00, #DDD0C8);
 }
 
@@ -68,6 +75,29 @@
     background-color: #5A5E72;
 }
 
+/*--------------------------------- Why Section */
+
+.why-section {
+    margin: 0;
+}
+
+.why-section h3 {
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 50px;
+    letter-spacing: 2px;
+}
+
+.why-section h5 {
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 30px;
+    letter-spacing: 1px;
+}
+
+.why-section p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+
+}
 
 /*--------------------------------- Footer */
 
@@ -76,7 +106,7 @@
     padding: 30px 0 30px 0;
 }
 
-.contact-hours-info h3,
+.contact-hours-info h4,
 .contact-hours-info p {
     margin-bottom: 0;
     margin-left: 10px;
@@ -84,7 +114,7 @@
     font-family: 'Roboto', sans-serif;
 }
 
-.contact-hours-info h3 {
+.contact-hours-info h4 {
     font-family: 'Bebas Neue', sans-serif;
     letter-spacing: 2px;
 }
