--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,105 @@ body {
     padding: 0;
 }
 
+.what-heading-section h1 {
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 70px;
+}
+
+/*--------------------------------- Images */
+
+.hero-img-home {
+    position: relative;
+    background: url('../images/hero-home-3.jpeg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+
+.hero-img-home::before {
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(to right, #ffffff00, #DDD0C8);
+}
+
+.hero-img-what {
+    position: relative;
+    background: url('../images/hero-what-we-do-1.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 500px;
+}
+
+.corp-travel {
+    background: url('../images/corporate-travel.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 250px;
+    height: 250px;
+}
+
+.private-jet-travel {
+    background: url('../images/private-jet.jpg');
+    background-position: left;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 250px;
+    height: 250px;
+}
+
+.marine-travel {
+    background: url('../images/marine-travel-2.jpeg');
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 250px;
+    height: 250px;
+}
+
+.group-travel {
+    background: url('../images/group-travel.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 250px;
+    height: 250px;
+}
+
+.meeting-room {
+    background: url('../images/meetings.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 250px;
+    height: 250px;
+}
+
+.visa-travel {
+    background: url('../images/visas.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 250px;
+    height: 250px;
+}
+
+
 /*--------------------------------- Colors */
 
-.why-section-bg-color {
+.why-section-bg-color,
+.what-heading-bg-color {
     background-color: #DDD0C8;
 }
+
+
 
 /*--------------------------------- Home */
 
@@ -17,13 +111,9 @@ body {
 
 .navbar-brand {
     font-family: 'Bebas Neue', sans-serif;
-    font-size: 25px;
+    font-size: 45px;
     color: #DDD0C8;
     letter-spacing: 2px;
-}
-
-.logo-section {
-    padding-top: 8px;
 }
 
 
@@ -34,7 +124,7 @@ body {
 
 .navbar-nav .nav-item a {
     font-family: 'Roboto', sans-serif;
-    font-size: 18px;
+    font-size: 19px;
     color: #DDD0C8;
     padding-top: 10px;
 
@@ -46,24 +136,7 @@ body {
 
 /*------------- Question Section ---------*/
 
-.hero-img {
-    position: relative;
-    background: url('../images/hero-home-3.jpeg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-}
 
-.hero-img::before {
-    content: '';
-    position: absolute;
-    top: 0px;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: linear-gradient(to right, #ffffff00, #DDD0C8);
-}
 
 .question-container {
     position: absolute;
@@ -73,7 +146,7 @@ body {
 
 .question-section {
     font-family: "Bebas Neue", sans-serif;
-    font-size: 60px;
+    font-size: 70px;
     z-index: 1;
     color: #2f4858;
 }
@@ -91,7 +164,7 @@ body {
     border-color: #2f4858;
 }
 
-/*-----------------Why Section----------------  */
+/*-----------------Main Section----------------  */
 
 .why-section {
     margin: 0;
@@ -118,11 +191,23 @@ body {
     letter-spacing: 1px;
 }
 
-.why-section p {
+.why-section p,
+.what-heading-section p {
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
 
 }
+
+.what-heading-section {
+    color: #2f4858;
+}
+
+
+/*--------------------------------- What we do header */
+
+
+
+
 
 
 /*--------------------------------- Footer */
