--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,10 +101,21 @@ body {
     height: 250px;
 }
 
+.hero-img-sustainability {
+    position: relative;
+    background: url('../images/sustainability.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 700px;
+}
+
 /*--------------------------------- Colors */
 
 .why-section-bg-color,
-.what-heading-bg-color {
+.what-heading-bg-color,
+.sustainability-section {
     background-color: #DDD0C8;
 }
 
@@ -178,14 +189,17 @@ body {
 .why-section h3,
 .why-section h5,
 .expertise-section h3,
-.expertise-text h5 {
+.expertise-text h5,
+.sustainability-section h1 {
     font-family: 'Bebas Neue', sans-serif;
 }
 
 .why-section h3,
 .why-section h5,
 .why-section p,
-.expertise-section p {
+.expertise-section p,
+.sustainability-section h1,
+.sustainability-section p {
     color: #2f4858;
 }
 
@@ -202,7 +216,8 @@ body {
 
 .why-section p,
 .what-heading-section p,
-.expertise-section p {
+.expertise-section p,
+.sustainability-section p {
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
 
@@ -229,6 +244,9 @@ body {
     padding-top: 10px;
 }
 
+.sustainability-section h1 {
+    letter-spacing: 2px;
+}
 
 
 
