--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,14 +111,24 @@ body {
     height: 700px;
 }
 
+.hero-img-who {
+    position: relative;
+    background: url('../images/who-are-we-2.jpeg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 700px;
+}
+
 /*--------------------------------- Colors */
 
 .why-section-bg-color,
 .what-heading-bg-color,
-.sustainability-section {
+.sustainability-section,
+.who-are-we-section {
     background-color: #DDD0C8;
 }
-
 
 
 /*--------------------------------- Home */
@@ -143,7 +153,6 @@ body {
     font-size: 19px;
     color: #DDD0C8;
     padding-top: 10px;
-
 }
 
 .hamburger-menu {
@@ -248,6 +257,18 @@ body {
     letter-spacing: 2px;
 }
 
+/*--------------------------------- Who we are section */
+
+.staff-portrait {
+    display: block;
+    object-fit: cover;
+    object-position: center;
+    width: 200px;
+    height: 200px;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.3);
+    margin: 15px auto 0 auto;
+
+}
 
 
 /*--------------------------------- Footer */
@@ -348,11 +369,11 @@ body {
         height: 20px;
     }
 
-    .hero-img {
+    .hero-img-home {
         height: 50vh;
     }
 
-    .hero-img::before {
+    .hero-img-home::before {
         content: '';
         position: absolute;
         top: 0;
