--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@
 
 .hero-img-what {
     position: relative;
-    background: url('../images/heror-what-we-do-4.jpg');
+    background: url('../images/hero-what-we-do-3.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -475,7 +475,12 @@ select .option {
 }
 
 .address-section {
+    padding-left: 100px;
     padding-bottom: 70px;
+}
+
+.map-section {
+    padding-top: 40px;
 }
 
 
@@ -645,6 +650,11 @@ select .option {
         width: 100%;
         height: 300px;
     }
+    .address-section {
+        padding-left: 0;
+        padding-bottom: 70px;
+    }
+
 
 }
 
@@ -655,4 +665,5 @@ select .option {
         margin-left: auto;
         margin-right: 0;
     }
+
 }
